--- a/AccessModifiers/AccessModifiers/App.config
+++ b/AccessModifiers/AccessModifiers/App.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+    </startup>   
+    <appSettings>
+      <add key="log4net.Config" value="log4net.config"/>
+      <add key="log4net.Config.Watch" value="True"/>
+    </appSettings>
 </configuration>
