--- a/Pattern.Abstract.Factory/Pattern.Abstract.Factory.csproj
+++ b/Pattern.Abstract.Factory/Pattern.Abstract.Factory.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{93D36CCB-6CFF-4757-8226-45A185C5E844}</ProjectGuid>
+    <ProjectGuid>{0E765F94-E33D-44FE-A2FF-54797123AA4A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebSocketServer</RootNamespace>
-    <AssemblyName>WebSocketServer</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>Pattern.Abstract.Factory</RootNamespace>
+    <AssemblyName>Pattern.Abstract.Factory</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,18 +38,20 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AfricaFactory.cs" />
+    <Compile Include="AmericaFactory.cs" />
+    <Compile Include="AnimalWorld.cs" />
+    <Compile Include="ContinentFactory.cs" />
+    <Compile Include="DocumentCreator.cs" />
+    <Compile Include="Documents.cs" />
+    <Compile Include="FancyDocumentCreator.cs" />
+    <Compile Include="FoodChain.cs" />
+    <Compile Include="ModernDocumentCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="DemoWebSocket.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
